# DesignPatterns

./: .gitignore  ProjektKoncowy.md  README.md
01Singleton/: Readme.md  Zadania.md  Zadania.txt
01Singleton/Students/: Readme.txt
02Fabryka/: Readme.md  Zadania.txt
02Fabryka/CSSamples/: FactoryPattern.sln  Readme.md
02Fabryka/Students/: Readme.txt
02Fabryka/src/: Zadania.txt
03Builder/: Readme.md  Zadania.txt
03Builder/01SimpleBuilder/: 01SimpleBuilder.csproj  01SimpleBuilder.sln  Builder.cs  ConcreteBuilder1.cs  ConcreteBuilder2.cs  Director.cs  MainApp.cs  Product.cs
03Builder/02VehicleBuilder/: 02VehicleBuilder.csproj  CarBuilder.cs  MainApp.cs  MotorCycleBuilder.cs  ScooterBuilder.cs  Shop.cs  Vehicle.cs  VehicleBuilder.cs
03Builder/03FluentBuilder/: 03FluentBuilder.csproj  CarBuilder.cs  MainApp.cs  ScooterBuilder.cs  Shop.cs  Vehicle.cs  VehicleBuilder.cs
03Builder/04EmployeeFluentBuilder/: Employee.cs  EmployeeBuilder.cs
03Builder/04EmployeeFluentBuilderTest/: 04EmployeeFluentBuilderTest.csproj  (+1 more)
04Prototype/: Readme.md  Zadania.txt
06Adapter/: Readme.md  Zadania.txt
13Obserwator/: README.md
A01CQRSPattern/: THANKS.md
ProjektyStudentow/: ReadMe.txt
ProjektyStudentow/2018_Damian_Kalinowski/dpatterns/: CMakeLists.txt
ProjektyStudentow/2018_Damian_Kalinowski/dpatterns/include/: composite.hpp  iterator.hpp  object_pool.hpp  observer.hpp  third_party.hpp
ProjektyStudentow/2018_Damian_Kalinowski/dpatterns/src/: composite.cpp  iterator.cpp  main.cpp  object_pool.cpp  observer.cpp  third_party.cpp
Zadania/: Zadania.md  Zadania2.md
(+6716 files in other folders)
